--- a/resumeHTML.html
+++ b/resumeHTML.html
@@ -254,7 +254,7 @@
                 <div class="areaBox portfolio">
                     <h3 class="ftco-animate">Portfolio</h3>
 
-                    <a href="https://vishalsondarva.github.io/cv/" class="ftco-animate" target="_blank">www.vishalsondarva.github.io/cv/</a>
+                    <a href="http://vishal.ezyro.com/" class="ftco-animate" target="_blank">www.vishal.ezyro.com/</a>
                 </div>
             </div>
 
