--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
 							<p class="mb-4">
-								<span class="number">3 Years</span>
+								<span class="number">5 Years</span>
 								<span>Work Experience</span>
 							</p>
 							<p><a href="resumeHTML.html" class="btn btn-dark py-3 px-5" title="Vishal Sondarva CV">View
@@ -147,7 +147,7 @@
 								<span class="date">2015-2018</span>
 								<h2>Bachelor of Computer Applications</h2>
 								<span class="position">Saurastra University</span>
-								<p></p>
+								<p>The Future Computer Science - Junagadh</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -158,7 +158,7 @@
 								<span class="date">2013-2015</span>
 								<h2>HSC in Commerce</h2>
 								<span class="position">Gujarat State Board</span>
-								<p></p>
+								<p>Gujarat State Board</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -169,7 +169,7 @@
 								<span class="date">2012-2013</span>
 								<h2>SSC in design </h2>
 								<span class="position">Gujarat State Board</span>
-								<p></p>
+								<p>Gujarat State Board</p>
 							</div>
 						</div>
 					</div>
@@ -185,7 +185,14 @@
 								<span class="date">September 2020 - Present </span>
 								<h2>Web Designer</h2>
 								<span class="position">Silicon IT Hub Pvt LTD - Ahmedabad, Gujarat </span>
-								<p></p>
+								<p>
+									I specialize in crafting exceptional web applications and responsive designs that
+									elevate user interactions. With expertise in converting PSD designs to HTML5 and a
+									proficiency in HTML5, CSS3, JavaScript, jQuery, Sass, and Less, I'm dedicated to
+									creating captivating and interactive user interfaces. I leverage creative tools like
+									Figma, InDesign, Adobe Illustrator, Photoshop, and XD to deliver designs that enrich
+									overall user experiences.
+								</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -196,7 +203,11 @@
 								<span class="date">February 2019 - June 2020 </span>
 								<h2>Web Designer</h2>
 								<span class="position">Alpha e barcode solution Pvt LTD - Ahmedabad, Gujarat </span>
-								<p></p>
+								<p>
+									I'm a web designer with a focus on responsive designs, using HTML5, CSS3,
+									JavaScript, and design tools like Figma, InDesign, and Photoshop. I'm dedicated to
+									enriching user experiences
+								</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -264,7 +275,7 @@
 									<h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
 
 									<!-- Progress bar 1 -->
-									<div class="progress mx-auto" data-value='80'>
+									<div class="progress mx-auto" data-value='90'>
 										<span class="progress-left">
 											<span class="progress-bar border-primary"></span>
 										</span>
@@ -273,7 +284,7 @@
 										</span>
 										<div
 											class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-											<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
+											<div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
 										</div>
 									</div>
 									<!-- END -->
@@ -308,7 +319,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>SCSS / LESS</h3>
+									<h3>SASS / LESS</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -321,9 +332,31 @@
 								<div class="progress-wrap ftco-animate">
 									<h3>jQuery</h3>
 									<div class="progress">
-										<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+										<div class="progress-bar color-2" role="progressbar" aria-valuenow="90"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>WordPress</h3>
+									<div class="progress">
+										<div class="progress-bar color-5" role="progressbar" aria-valuenow="60"
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>60%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>React Js</h3>
+									<div class="progress">
+										<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
+											aria-valuemin="0" aria-valuemax="100" style="width:50%">
+											<span>50%</span>
 										</div>
 									</div>
 								</div>
@@ -355,17 +388,6 @@
 									<h3>InVision</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
-											aria-valuemin="0" aria-valuemax="100" style="width:60%">
-											<span>60%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3>WordPress</h3>
-									<div class="progress">
-										<div class="progress-bar color-5" role="progressbar" aria-valuenow="60"
 											aria-valuemin="0" aria-valuemax="100" style="width:60%">
 											<span>60%</span>
 										</div>
