--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<p>
 								<!-- <a href="resumeHTML.html" class="btn btn-dark py-3 px-5" title="Vishal Sondarva CV">View
 									CV</a> -->
-								<a href="vishal_sondarva.pdf" target="_blank" class="btn btn-primary py-3 px-5"
+								<a href="vishal_sondarv" target="_blank" class="btn btn-primary py-3 px-5"
 									title="Vishal Sondarva CV">Download CV</a>
 							</p>
 						</div>
